--- a/templates/add.html
+++ b/templates/add.html
@@ -11,7 +11,7 @@
 	<button id="22" value="haha"/>
 	 <script >
 	 $("#22").click(function(){
-		 alert("1234");
+		 alert("12344455123213");
 	 })
 	 </script>
 </body>
