--- a/templates/add.html
+++ b/templates/add.html
@@ -11,7 +11,9 @@
 	<button id="22" value="haha"/>
 	 <script >
 	 $("#22").click(function(){
-		 alert("测试zhe");
+		alert("heb")
+	alert("213123);
+	alert("测试zhe");
 	 })
 	 </script>
 </body>
